Bug 12766 - contend_level2_oplocks_begin_default oplock optimisation doesn't carry over to leases
Summary: contend_level2_oplocks_begin_default oplock optimisation doesn't carry over t...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-04 08:03 UTC by Ralph Böhme
Modified: 2017-05-22 18:18 UTC (History)
3 users (show)

See Also:


Attachments
Patch for 4.5 and 4.6 cherry-picked from master (6.40 KB, patch)
2017-05-07 06:43 UTC, Ralph Böhme
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2017-05-04 08:03:04 UTC
The idea of the optimisation is to avoid expensive db queries in locking.tdb if we *know* we're the only open.

The code uses EXCLUSIVE_OPLOCK_TYPE which doesn't cover leases.

Have patch, need bugnumber.

This is the bug I talked about at SambaXP, spotted with perf.
Comment 1 Ralph Böhme 2017-05-07 06:43:02 UTC
Created attachment 13195 [details]
Patch for 4.5 and 4.6 cherry-picked from master
Comment 2 Jeremy Allison 2017-05-08 17:51:53 UTC
Re-assigning to Karolin for inclusion in 4.6.next, 4.5.next.
Comment 3 Karolin Seeger 2017-05-09 08:16:00 UTC
(In reply to Jeremy Allison from comment #2)
Pushed autobuild-v4-{6,5}-test.
Comment 4 Karolin Seeger 2017-05-19 07:21:00 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to both branches.
Closing out bug report.

Thanks!
Comment 5 Jeremy Allison 2017-05-22 18:18:10 UTC
*** Bug 12798 has been marked as a duplicate of this bug. ***